--- a/app/templates/base/_meta.html
+++ b/app/templates/base/_meta.html
@@ -1,12 +1,8 @@
 <meta charset="utf-8">
-{# <base href="/"> #}
 <title>{{ title }}</title>
 <meta name="description" content="">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-{# Template Basic Images Start #}
-<meta property="og:image" content="path/to/image.jpg">
-<link rel="icon" href="img/favicon/favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-{# Custom Browsers Color Start #}
+<link rel="icon" href="/app/assets/favicons/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/app/assets/favicons/apple-touch-icon-180x180.png">
 <meta name="theme-color" content="#000">
