--- a/app/templates/base/_main.html
+++ b/app/templates/base/_main.html
@@ -22,9 +22,6 @@
 </body>
 
 
-<!-- build:js js/main.js async -->
-<script type="text/javascript" src="js/_hamburger.js"></script>
-<script type="text/javascript" src="js/_projects.js"></script>
-<!-- endbuild -->
+<script type="text/javascript" src="/scripts/hamburger.js"></script>
 
 </html>
