--- a/app/templates/base/_main.html
+++ b/app/templates/base/_main.html
@@ -3,25 +3,15 @@
 
 <head>
 	{% include "base/_meta.html" %}
-	<link rel="stylesheet" href="./libs/fontawesome/css/all.min.css">
-	<!-- build:css css/libs.css rel="stylesheet" media="nope!" onload="this.media='all'" -->
-	<link href="libs/normalize.css" rel="stylesheet">
-	<!-- endbuild -->
-	<link href="css/main.css" rel="stylesheet" media="nope!" onload="this.media='all'">
-	<noscript>
-		<link href="css/libs.css" rel="stylesheet">
-		<link href="css/main.css" rel="stylesheet">
-	</noscript>
+	<link href="/styles/index.css" rel="stylesheet">
 </head>
 
 
 <body>
-
 	{% block main %}{% endblock %}
-
 </body>
 
 
-<script type="text/javascript" src="/scripts/hamburger.js"></script>
+<script type="text/javascript" src="/scripts/index.js"></script>
 
 </html>
