--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 	{% include "blocks/_header.html" %}
-	<svg src="./images/settings.svg"></svg>
+	<svg src="/images/settings.svg"></svg>
 {% endblock %}
 
 <img srcset="footer.jpg 1x, footer@2x.webp 2x">
